package org.g16.MonopolyJR;

public class GoToJailField extends Field {
    public GoToJailField(String name) {
        super(name);
    }
}
